# pg_idkit

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG  CODEOWNERS  Cargo.toml  Justfile  LICENSE  Makefile  README.md  cliff.toml  pg_idkit.control  rust-toolchain.toml
.git-crypt/keys/default/0/: 053D2762FD779839D86F3DD53B8485E28FD4DA6E.gpg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: base-pkg-image.yml  build.yaml  ci-builder-image.yml  container.yaml  create-release-pr.yaml  prep-release.yaml  release.yaml  release.yml  rpm.yaml  tag-release.yaml  tag-release.yml  test.yaml
.github/workflows/build-and-test/: action.yaml
.github/workflows/build-and-test-gnu/: action.yaml
.github/workflows/build-rpm/: action.yaml
docs/: benchmarks.md  ci.md  local-development.md  packaging.md
infra/docker/: 14.4-alpine.Dockerfile  base-pkg-alpine3.18-amd64.Dockerfile  base-pkg-alpine3.18.Dockerfile  base-pkg-alpine3.20.3-amd64.Dockerfile  base-pkg-alpine3.21.3-amd64.Dockerfile  base-pkg-alpine3.22.2-amd64.Dockerfile  base-pkg-pg15.5-alpine3.18-amd64.Dockerfile  base-pkg-pg16.1-alpine3.18-amd64.Dockerfile  builder-gnu.Dockerfile  builder-musl.Dockerfile  ci.Dockerfile  pg15.5-alpine3.18-amd64.Dockerfile  pg_idkit-pg15.12-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg15.13-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg15.14-alpine3.22.2-amd64.Dockerfile  pg_idkit-pg15.5-alpine3.18-amd64.Dockerfile  pg_idkit-pg15.6-alpine3.18-amd64.Dockerfile  pg_idkit-pg15.8-alpine3.20.3-amd64.Dockerfile  pg_idkit-pg16.1-alpine3.18-amd64.Dockerfile  pg_idkit-pg16.10-alpine3.22.2-amd64.Dockerfile  pg_idkit-pg16.4-alpine3.20.3-amd64.Dockerfile  pg_idkit-pg16.8-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg16.9-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg17.0-alpine3.20.3-amd64.Dockerfile  pg_idkit-pg17.4-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg17.5-alpine3.21.3-amd64.Dockerfile  pg_idkit-pg17.6-alpine3.22.2-amd64.Dockerfile  pg_idkit-pg18.0-alpine3.22.2-amd64.Dockerfile
infra/pg/: pg_idkit.control
secrets/docker/: .dockerconfigjson  config.json  password.secret  username.secret
secrets/github/ci/: image.accesstoken.secret
src/: common.rs  cuid.rs  cuid2.rs  ksuid.rs  ksuid_ms.rs  lib.rs  nanoid.rs  pushid.rs  sonyflake.rs  timeflake.rs  typeid.rs  ulid.rs  uuid_v6.rs  uuid_v7.rs  xid.rs
src/uuid_v6/: vendor.rs
