[package]
name = "pg_idkit"
version = "0.3.1"
edition = "2021"
authors = ["Victor Adossi <vados@vadosware.io>"]
license = "MIT"
rust-version = "1.85.1"
description = """
A Postgres extension for generating UUIDs
"""

[badges]
maintenance = { status = "actively-maintained" }

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_idkit"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
getrandom = { version = "0.2" }
pgrx = { version = "=0.15.0" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = { version = "1", default-features = false }
time = { version = "0.3" }

cuid = { version = "1.3" }
cuid2 = { version = "0.1" }
svix-ksuid = { version = "0.8" }
nanoid = { version = "0.4" }
pushid = { version = "0.0.1" }
timeflake-rs = { version = "0.3" }
ulid = { version = "1.2", features = ["uuid"] }
uuid = { version = "1.17", features = ["v4", "v6", "v7"] }
xid = { version = "1.1" }
type-safe-id = { version = "0.3.3", default-features = false }

[dev-dependencies]
pgrx-tests = { version = "=0.15.0" }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.ci]
inherits = "test"

[package.metadata.generate-rpm]
assets = []

[package.metadata.generate-rpm.variants.pg13]
assets = [
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/lib/postgresql/pg_idkit.so", dest = "/usr/lib64/pgsql/pg_idkit.so", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit--0.3.1.sql", dest = "/usr/share/pgsql/extension/pg_idkit--0.3.1.sql", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit.control", dest = "/usr/share/pgsql/extension/pg_idkit.control", mode = "755" },
]
requires = { postgresql-server = "> 13", glibc = "*" }
release = "pg13"

[package.metadata.generate-rpm.variants.pg14]
assets = [
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/lib/postgresql/pg_idkit.so", dest = "/usr/lib64/pgsql/pg_idkit.so", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit--0.3.1.sql", dest = "/usr/share/pgsql/extension/pg_idkit--0.3.1.sql", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit.control", dest = "/usr/share/pgsql/extension/pg_idkit.control", mode = "755" },
]
requires = { postgresql-server = "> 14", glibc = "*" }
release = "pg14"

[package.metadata.generate-rpm.variants.pg15]
assets = [
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/lib/postgresql/pg_idkit.so", dest = "/usr/lib64/pgsql/pg_idkit.so", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit--0.3.1.sql", dest = "/usr/share/pgsql/extension/pg_idkit--0.3.1.sql", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit.control", dest = "/usr/share/pgsql/extension/pg_idkit.control", mode = "755" },
]
requires = { postgresql-server = "> 15", glibc = "*" }
release = "pg15"

[package.metadata.generate-rpm.variants.pg16]
assets = [
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/lib/postgresql/pg_idkit.so", dest = "/usr/lib64/pgsql/pg_idkit.so", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit--0.3.1.sql", dest = "/usr/share/pgsql/extension/pg_idkit--0.3.1.sql", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit.control", dest = "/usr/share/pgsql/extension/pg_idkit.control", mode = "755" },
]
requires = { postgresql-server = "> 16", glibc = "*" }
release = "pg16"

[package.metadata.generate-rpm.variants.pg17]
assets = [
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/lib/postgresql/pg_idkit.so", dest = "/usr/lib64/pgsql/pg_idkit.so", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit--0.3.1.sql", dest = "/usr/share/pgsql/extension/pg_idkit--0.3.1.sql", mode = "755" },
  { source = "/tmp/pg_idkit/rpm/scratch/pgrx-install/share/postgresql/extension/pg_idkit.control", dest = "/usr/share/pgsql/extension/pg_idkit.control", mode = "755" },
]
requires = { postgresql-server = "> 17", glibc = "*" }
release = "pg17"
